--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 <h1>Interactive projects</h1>
 <ul>
-	<li><a href="play-with-animals">Play with animals</a></li>
+	<li><a href="Egg_slowmo">Mouse Interactions</a></li>
 	<li><a href="random-composition">Random composition</a></li>
 </ul>
 </body>
