--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="UTF-8"/>
-	<meta name="Compositions" content="Erica Bica dos Reis" />
+	<meta name="Compositions" content="weselwit" />
 	<title>interazione 01</title>
 	<style type="text/css">
 		
